--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </button>
             </form>
             <p class="copyright">
-                Hiro Šima &copy; All Rights Reserved
+                Copyright &copy; All Rights Reserved
             </p>
         </section>
     </div>
